# reverse-engineering

./: .env-example  .gitignore  CLAUDE.md  ERD.md  README.md  main.py  pyproject.toml
artifacts/: Pipeline_output.txt  analysis_report.json  fixed_base_agent.py  fixed_mathsquiz.py  fixed_polygons.py  improvement_history.json  improvement_loop_output.txt  naive_baseline_output.txt  navigate_demo_output.txt
config/: logging_config.json  rate_limits.json  setup.json
data/: langgraph_workflow.mmd
docs/: PLAN.md  PRD.md  PRD_graph_builder.md  PROMPTS.md  TODO.md
obsidian/: BEFORE_AFTER.md  BLOCK_SCHEMA.md  OOP_SCHEMA.md  analysis_report.json  graph.html  graph.json  hot.md  improvement_history.json  index.md  investigation.md  research-questions.md
obsidian_after/: graph.html  graph.json  hot.md  index.md
obsidian_demo/: analysis_report.json  graph.html  graph.json  hot.md  index.md
obsidian_improved_iter1/: graph.html  graph.json  hot.md  index.md
reports/: BLOCK_SCHEMA.md  BUG_REPORT.md  GRAPH_REPORT.md  OOP_SCHEMA.md  TOKEN_COMPARISON.md
src/: __init__.py  constants.py  langgraph_workflow.py  runner_graph.py  runner_improve.py  runner_pipeline.py  sdk.py  version.py  workflow_helpers.py  workflow_nodes.py  workflow_state.py
tests/: conftest.py  test_agent_extras.py  test_agents.py  test_analyzer_fixer.py  test_ast_parser.py  test_build_graph_node.py  test_coverage_extras.py  test_coverage_misc.py  test_data_types.py  test_fixer_agent.py  test_gatekeeper.py  test_graph_builder.py  test_integration.py  test_kg_extras.py  test_langgraph_workflow.py  (+3 more)
(+203 files in other folders)
